--- a/studio/components/_row.scss
+++ b/studio/components/_row.scss
@@ -2,24 +2,23 @@
 
 
 #TafnitCore_System_UI_App_Tools_Studio_UXStudio{
-mainbody {
+// mainbody {
 
-    .ux-studio-border{
-    &.border-studio.xtaf-row-main,.xstudioRow.border-studio{
-        border-radius: 20px;
-        border: 1px dashed  black !important;
-        box-shadow: 0px 0px 6px 0px rgba(21, 155, 197, 0.80);
-    }
+//     .ux-studio-border{
+//     &.border-studio.xtaf-row-main,.xstudioRow.border-studio{
+//         border-radius: 20px;
+//         border: 1px dashed  black !important;
+//         box-shadow: 0px 0px 6px 0px rgba(21, 155, 197, 0.80);
+//     }
 
-    .xstudioCol{
-        &.border-studio {
-            border-radius: 0px;
-            border: 1px dashed  black !important;
+//     .xstudioCol{
+//         &.border-studio {
+//             border-radius: 0px;
+//             border: 1px dashed  black !important;
    
-        }
+//         }
 
-    }
-}
+// }
 
 margin-top: 0px !important;
 .xtaf-row-main,.xstudioRow{
@@ -121,6 +120,4 @@ margin-top: 0px !important;
         line-height: 100%; /* 13px */
         text-decoration-line: underline;
     }
-}
-
 }
