--- a/studio/variable/_variable.scss
+++ b/studio/variable/_variable.scss
@@ -131,6 +131,14 @@ $drawer-color-text:#000000;
 
 //// added by ben
 $component-border-dash:#7E7B7B;
+$properties-list-proprties-list-bg-disable: #FBFBFB;
+$properties-list-proprties-list-text-disable: #C8C8C8;
+$studio-primary-400: #29AFD9;
+$vanilla-other-white:#FFF;
+$title-component-title-component-bg-default: #07475C;
+$component-component-border-dash: #C8C8C8;
+$text-field-text-field-input-default-border: #D9D9D9;
+$color-other-white: #FFF;
 
 //label//
 
