--- a/studio/style.scss
+++ b/studio/style.scss
@@ -293,8 +293,7 @@
         &>div,
         &>div>div,
         &>div>div>div,
-        &>div>div>div>div,
-        &>div>div>div>div>div {
+        &>div>div>div>div{
             height: 100% !important;
             max-height: 84vh;
         }
