--- a/base-newStyle copy/components/newStyle.css
+++ b/base-newStyle copy/components/newStyle.css
@@ -8450,7 +8450,7 @@ body.bodyPayment .logoImg {
   height: 100%;
   flex: 1 1 auto;
 }
-#TafnitCore_System_UI_App_Tools_Studio_UXStudio div[uxid=xstudioMainpanel] > div, #TafnitCore_System_UI_App_Tools_Studio_UXStudio div[uxid=xstudioMainpanel] > div > div, #TafnitCore_System_UI_App_Tools_Studio_UXStudio div[uxid=xstudioMainpanel] > div > div > div, #TafnitCore_System_UI_App_Tools_Studio_UXStudio div[uxid=xstudioMainpanel] > div > div > div > div, #TafnitCore_System_UI_App_Tools_Studio_UXStudio div[uxid=xstudioMainpanel] > div > div > div > div > div {
+#TafnitCore_System_UI_App_Tools_Studio_UXStudio div[uxid=xstudioMainpanel] > div, #TafnitCore_System_UI_App_Tools_Studio_UXStudio div[uxid=xstudioMainpanel] > div > div, #TafnitCore_System_UI_App_Tools_Studio_UXStudio div[uxid=xstudioMainpanel] > div > div > div, #TafnitCore_System_UI_App_Tools_Studio_UXStudio div[uxid=xstudioMainpanel] > div > div > div > div {
   height: 100% !important;
   max-height: 84vh;
 }
